--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: #1a1a1c;
     color: #fff;
 }
@@ -18,16 +19,21 @@
 }
 
 .coin-search {
-    margin-bottom: 64px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
 }
 
-.coin-text {
-    margin-bottom: 32px;
-    text-align: center;
+.coin-logo {
+    margin: 5px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    width: 100px;
+    height: 80px;
 }
 
 .coin-input {
