--- a/src/Coin.css
+++ b/src/Coin.css
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     padding-right: 24px;
-
+    font-family: 'Poppins', sans-serif;
     min-width: 300px;
 }
 
